# evonext-desktop

./: CHANGELOG.md  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
components/: Sidebar.vue
public/js/dash/: wasm_sdk.js
src/: App-REF.vue  App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: listen.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SidebarNav.vue
src/layouts/: AppLayout.vue
src/libs/: createDocument.ts  getAuthKey.ts  getIdentities.ts  getMnemonic.ts  getPrivateKeys.ts  getPublicKeys.ts  getTokenBalance.ts  getTransferKey.ts  sendCredit.ts  sendToken.ts  types.ts
src/libs/dash/: package.json  wasm_sdk.d.ts  wasm_sdk_bg.wasm.d.ts
src/pages/: About.vue  Apps.vue  Bootstrap.vue  Community.vue  Connect.vue  Disconnect.vue  Explore.vue  Explorer.vue  Favorites.vue  Home.vue  Identities.vue  Posts.vue  Remix.vue  Settings.vue  Stakehouse.vue  Wallet.vue  _Blank.vue
src/router/: index.ts
src/screens/: About.vue  Apps.vue  Bootstrap.vue  Community.vue  Connect.vue  Explorer.vue  Favorites.vue  Home.vue  Identities.vue  Identity.vue  Posts.vue  Remix.vue  Settings.vue  Stakehouse.vue  Wallet.vue  _Blank.vue
src/screens/Identity/: Register.vue
src/stores/: identity.ts  settings.ts  wallet.ts
