[package]
name = "evonext"
version = "25.10.4"
description = "Free Your Inhibitions — Discover safe and enjoyable spaces to Explore. Curate. Share YOUR Truth Fearlessly!"
authors = ["Sansbank DAO developers"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["tray-icon", "image-png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-opener = { version = "2.4.0" }
tauri-plugin-store = { version = "2.4.0" }

# tauri-plugin-stronghold = { version = "2.3.0", features = ["full"] }
# tokio = { version = "1.47.1", features = ["full"] } # Stronghold is async

[features]
# This section is used for custom features. You can leave it as is.
custom-protocol = ["tauri/custom-protocol"]
